--- a/package.json
+++ b/package.json
@@ -4,6 +4,25 @@
   "description": "A personal learning tool for Angular.",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "live-server"
+  },
+  "dependencies": {
+    "@angular/common": "2.4.4",
+    "@angular/compiler": "2.4.4",
+    "@angular/core": "2.4.4",
+    "@angular/forms": "2.4.4",
+    "@angular/http": "2.4.4",
+    "@angular/platform-browser": "2.4.4",
+    "@angular/platform-browser-dynamic": "2.4.4",
+    "@angular/router": "^3.4.4",
+
+    "core-js": "^2.4.0",
+    "rxjs": "5.0.3",
+    "systemjs": "0.19.43",
+    "zone.js": "0.7.6"
+  },
+  "devDependencies": {
+    "live-server": "0.8.2",
+    "typescript": "^2.1.5"
   }
 }
