--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@angular/platform-browser": "2.4.4",
     "@angular/platform-browser-dynamic": "2.4.4",
     "@angular/router": "^3.4.4",
-
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.0",
+    "jquery": "^3.1.1",
     "rxjs": "5.0.3",
     "systemjs": "0.19.43",
     "zone.js": "0.7.6"
